# openvslam

./: .gitignore  CMakeLists.txt
cmake/: OpenVSLAMConfig.cmake.in
examples/: CMakeLists.txt
examples/src/: run_camera_localization.cc  run_camera_slam.cc  run_euroc_slam.cc  run_image_localization.cc  run_image_slam.cc  run_kitti_slam.cc  run_tum_rgbd_slam.cc  run_video_localization.cc  run_video_slam.cc
examples/src/util/: euroc_util.cc  image_util.cc  kitti_util.cc  tum_rgbd_util.cc
modules/: CMakeLists.txt
modules/camera/: CMakeLists.txt
modules/camera/include/openvslam/camera/: base.hpp  equirectangular.hpp  fisheye.hpp  perspective.hpp
modules/camera/src/: base.cpp  equirectangular.cpp  fisheye.cpp  perspective.cpp
modules/config/: CMakeLists.txt
modules/config/include/openvslam/config/: config.hpp
modules/config/src/: config.cpp
modules/data/: CMakeLists.txt
modules/data/include/openvslam/data/: bow_database.hpp  common.hpp  frame.hpp  frame_statistics.hpp  keyframe.hpp  landmark.hpp  map_database.hpp
modules/data/src/: bow_database.cpp  camera_database.cpp  common.cpp  frame.cpp  frame_statistics.cpp  graph_node.cpp  keyframe.cpp  landmark.cpp  map_database.cpp
modules/feature/: CMakeLists.txt
modules/feature/include/openvslam/feature/: orb_extractor.hpp
modules/feature/src/: orb_extractor.cpp  orb_extractor_node.cpp  orb_params.cpp
modules/initialize/: CMakeLists.txt
modules/initialize/include/openvslam/initialize/: base.hpp  bearing_vector.hpp  perspective.hpp
modules/initialize/src/: base.cpp  bearing_vector.cpp  perspective.cpp
modules/io/: CMakeLists.txt
modules/io/include/openvslam/io/: map_database_io.hpp
modules/io/src/: map_database_io.cpp  trajectory_io.cpp
modules/match/: CMakeLists.txt
modules/match/include/openvslam/match/: area.hpp  bow_tree.hpp  fuse.hpp  projection.hpp  robust.hpp  stereo.hpp
modules/match/src/: area.cpp  bow_tree.cpp  fuse.cpp  projection.cpp  robust.cpp  stereo.cpp
modules/module/: CMakeLists.txt
modules/module/include/openvslam/module/: frame_tracker.hpp  initializer.hpp  keyframe_inserter.hpp  loop_detector.hpp  relocalizer.hpp  two_view_triangulator.hpp
modules/module/src/: frame_tracker.cpp  initializer.cpp  keyframe_inserter.cpp  local_map_cleaner.cpp  loop_bundle_adjuster.cpp  loop_detector.cpp  relocalizer.cpp  two_view_triangulator.cpp
modules/openvslam/: CMakeLists.txt
modules/openvslam/include/openvslam/openvslam/: global_optimization_module.hpp  mapping_module.hpp  system.hpp  tracking_module.hpp
modules/openvslam/src/: global_optimization_module.cpp  mapping_module.cpp  system.cpp  tracking_module.cpp
modules/optimize/: CMakeLists.txt
modules/optimize/include/openvslam/optimize/: graph_optimizer.hpp
modules/optimize/include/openvslam/optimize/g2o/: landmark_vertex.hpp  landmark_vertex_container.hpp
modules/optimize/include/openvslam/optimize/g2o/se3/: equirectangular_pose_opt_edge.hpp  equirectangular_reproj_edge.hpp  perspective_pose_opt_edge.hpp  perspective_reproj_edge.hpp  pose_opt_edge_wrapper.hpp  reproj_edge_wrapper.hpp  shot_vertex.hpp  shot_vertex_container.hpp
modules/optimize/include/openvslam/optimize/g2o/sim3/: backward_reproj_edge.hpp  forward_reproj_edge.hpp  graph_opt_edge.hpp  mutual_reproj_edge_wrapper.hpp  shot_vertex.hpp  transform_vertex.hpp
modules/optimize/src/: global_bundle_adjuster.cpp  graph_optimizer.cpp  local_bundle_adjuster.cpp  pose_optimizer.cpp  transform_optimizer.cpp
modules/optimize/src/g2o/: landmark_vertex.cpp  landmark_vertex_container.cpp
modules/optimize/src/g2o/se3/: equirectangular_pose_opt_edge.cpp  equirectangular_reproj_edge.cpp  perspective_pose_opt_edge.cpp  perspective_reproj_edge.cpp  shot_vertex.cpp  shot_vertex_container.cpp
modules/optimize/src/g2o/sim3/: backward_reproj_edge.cpp  forward_reproj_edge.cpp  graph_opt_edge.cpp  shot_vertex.cpp  transform_vertex.cpp
modules/pangolin_viewer/: CMakeLists.txt
modules/pangolin_viewer/include/openvslam/pangolin_viewer/: viewer.hpp
modules/pangolin_viewer/src/: color_scheme.cpp  viewer.cpp
modules/publish/: CMakeLists.txt
modules/publish/include/openvslam/publish/: frame_publisher.hpp  map_publisher.hpp
modules/publish/src/: frame_publisher.cpp  map_publisher.cpp
modules/socket_publisher/: CMakeLists.txt
modules/socket_publisher/include/openvslam/socket_publisher/: data_serializer.hpp  publisher.hpp  socket_client.hpp
modules/socket_publisher/src/: data_serializer.cpp  publisher.cpp  socket_client.cpp
modules/solve/: CMakeLists.txt
modules/solve/include/openvslam/solve/: common.hpp  essential_solver.hpp  fundamental_solver.hpp  homography_solver.hpp  pnp_solver.hpp  sim3_solver.hpp  triangulator.hpp
modules/solve/src/: common.cpp  essential_solver.cpp  fundamental_solver.cpp  homography_solver.cpp  pnp_solver.cpp  sim3_solver.cpp
modules/type/: CMakeLists.txt
modules/util/: CMakeLists.txt
modules/util/include/openvslam/util/: converter.hpp  fancy_index.hpp  image_converter.hpp  stereo_rectifier.hpp
modules/util/src/: converter.cpp  image_converter.cpp  random_array.cpp  stereo_rectifier.cpp
test/: CMakeLists.txt
test/feature/: CMakeLists.txt
test/feature/src/: test_orb_extractor.cpp  test_orb_params.cpp
test/helper/: CMakeLists.txt
test/helper/include/openvslam/helper/: bearing_vector.h  keypoint.h  landmark.h
test/helper/src/: bearing_vector.cc  keypoint.cc  landmark.cc
test/match/: CMakeLists.txt
test/match/src/: test_angle_checker.cpp  test_base.cpp
test/solve/: CMakeLists.txt
test/solve/src/: test_essential_solver.cpp  test_fundamental_solver.cpp  test_homography_solver.cpp  test_pnp_solver.cpp
test/util/: CMakeLists.txt
test/util/src/: test_fancy_index.cpp  test_random_array.cpp  test_trigonometric.cpp
