message(STATUS "-------")
message(STATUS "MODULES")
message(STATUS "-------")

add_subdirectory(type)
add_subdirectory(camera)
add_subdirectory(feature)
add_subdirectory(util)
add_subdirectory(openvslam)
add_subdirectory(config)
add_subdirectory(data)
add_subdirectory(match)
add_subdirectory(solve)
add_subdirectory(initialize)
add_subdirectory(io)
add_subdirectory(optimize)
add_subdirectory(module)
add_subdirectory(publish)

if(USE_VIEWER STREQUAL "Pangolin")
    add_subdirectory(pangolin_viewer)
elseif(USE_VIEWER STREQUAL "Socket")
    add_subdirectory(socket_publisher)
endif()
